feat: fileParser throws exception if extension isn't supported