@@ -7,15 +7,20 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
+import yaremax.com.pb_task_24_04.exceptions.FileParsingException;
 import yaremax.com.pb_task_24_04.markers.Processable;
 import yaremax.com.pb_task_24_04.util.MultipartFileToFileConverter;
 import yaremax.com.pb_task_24_04.util.parser.strategies.FileParserStrategy;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -42,7 +47,7 @@ class FileParserServiceTest {
         Processable entity2 = new Processable() {};
         List<Processable> entities = Arrays.asList(entity1, entity2);
 
-        when(fileParserFactory.getParser("csv")).thenReturn(Optional.of(csvStrategy));
+        when(fileParserFactory.getParser("csv")).thenReturn(csvStrategy);
         when(multipartFileToFileConverter.convert(multipartFile)).thenReturn(Optional.of(file));
         when(csvStrategy.parse(Optional.of(file), Processable.class)).thenReturn(Optional.of(entities));
 
@@ -54,23 +59,21 @@ class FileParserServiceTest {
     }
 
     @Test
-    void parseFile_NonExistingExtension_ReturnsEmpty() throws IOException {
+    void parseFile_NonExistingExtension_ThrowsException() throws IOException {
         // Arrange
         MultipartFile multipartFile = new MockMultipartFile("test.txt", "test.txt", "text/plain", "content".getBytes());
 
-        when(fileParserFactory.getParser("txt")).thenReturn(Optional.empty());
+        when(fileParserFactory.getParser("txt")).thenReturn(null);
 
-        // Act
-        Optional<List<Processable>> parsedEntities = fileParserService.parseFile(multipartFile, Processable.class);
-
-        // Assert
-        assertThat(parsedEntities).isEmpty();
+        // Act & Assert
+        assertThatThrownBy(() -> fileParserService.parseFile(multipartFile, Processable.class))
+                .isInstanceOf(FileParsingException.class);
     }
 
     @Test
     void getAllSupportedExtensions_ReturnsCorrectSet() {
         // Arrange
-        Set<String> supportedExtensions = new HashSet<>(Arrays.asList("csv", "xml"));
+        Set<String> supportedExtensions = Set.of("csv", "xml");
         when(fileParserFactory.getAllSupportedExtensions()).thenReturn(supportedExtensions);
 
         // Act
@@ -79,5 +82,4 @@ class FileParserServiceTest {
         // Assert
         assertThat(result).isEqualTo(supportedExtensions);
     }
-
 }
